@@ -28,7 +28,7 @@
   e2f730e78dc27254776b672fc007a4bef3dd0f56 2010090601 mingw32-autotools.xml
   9de97172522316bb359227b484cfc9bc4c5b6c5a 2011060500 mingw32-base.xml
   7ff448c34d1b3e7d49f9c10bbe4630366d0d9f3d 2010090600 mingw32-basic-bsdtar.xml
-  89f2e01067e79bd79bf30d3e547874e58b065397 2011021600 mingw32-binutils.xml
+  50e965109ffefcee6458508147f6d5c33ea89d9c 2011080500 mingw32-binutils.xml
   ec771f5e285c64e0696f091c99f680286c3c908e 2011052100 mingw32-bzip2.xml
   07b4037fb26f3015890c27e07f6e292bba1c2dbb 2010090600 mingw32-cygutils.xml
   f22aef52f7062813148d3ea1f4477b7ee05f5f5a 2010052100 mingw32-expat.xml
