@@ -1,5 +1,12 @@
 2011-08-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
 
+	Update & publish mingw32-binutils.
+
+	* mingw32/mingw32-binutils.xml: Update to 2.21.1-2.
+	* mingw32/issue.log: Updated accordingly.
+
+2011-08-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
 	Update & publish mingw32-gdb.
 
 	* mingw32/mingw32-gdb.xml: Update to 7.3-2.
